k8s/jaeger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-all-in-one
  namespace: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-all-in-one
  template:
    metadata:
      labels:
        app: jaeger-all-in-one
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 14250
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: jaeger
spec:
  type: NodePort
  selector:
    app: jaeger-all-in-on
  ports:
    - port: 5775
      targetPort: 5775
      protocol: UDP
      name: zipkin-thrift-compact
    - port: 6831
      targetPort: 6831
      protocol: UDP
      name: jaeger-thrift-compact
    - port: 6832
      targetPort: 6832
      protocol: UDP
      name: jaeger-thrift-binary
    - port: 5778
      targetPort: 5778
      name: jaeger-config-rest
    - port: 16686
      targetPort: 16686
      name: jaeger-ui
    - port: 14268
      targetPort: 14268
      name: jaeger-collector-http
    - port: 14250
      targetPort: 14250
      name: jaeger-collector-grpc
    - port: 9411
      targetPort: 9411
      name: jaeger-zipkin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui-ingress
  namespace: jaeger
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaeger
            port:
              number: 16686
